# cira-claw

./: .gitignore  README.md  cira-claw.service  cira.example.json  model_config.example.json  package-lock.json  package.json  start-dashboard.bat  start-gateway.bat  start-runtime.bat  start-system.bat  stop-system.bat  tsconfig.json
cli/: cira.ts
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.vue  env.d.ts  main.ts
dashboard/src/components/: CameraStream.vue  NodeCard.vue
dashboard/src/components/rule-graph/: ActionNodeVue.vue  AtomicRuleNodeVue.vue  OperatorNodeVue.vue  RuleGraphCanvas.vue  RuleGraphNode.vue  RuleGraphSidebar.vue  SocketVue.vue  StatefulConditionNodeVue.vue
dashboard/src/composables/: socketSetup.ts  sockets.ts  types.ts  useRuleEditor.ts  useRuleEvaluation.ts
dashboard/src/pages/: CameraGrid.vue  CameraManager.vue  Chat.vue  DeviceDetail.vue  ImageTester.vue  ModelConversion.vue  Overview.vue  RuleGraph.vue  Rules.vue
nodes.example/: jetson-line1.json
runtime/: CMakeLists.txt  README.md  cira.pc.in  cira_model.example.json
runtime/include/: cira.h  cira_internal.h  yolo_decoder.h
runtime/src/: annotator.c  camera.c  camera.cpp  cira.c  darknet_loader.c  jpeg_encoder.cpp  ncnn_loader.cpp  onnx_loader.c  stream_server.c  trt_loader.c  yolo_decoder.c
runtime/test/: test_darknet.c  test_ncnn.c  test_onnx.c  test_stream.c
runtime/test_model/yolov4-tiny/: model.param
scripts/: install.sh  test-modbus.js
src/: config.ts  index.ts
src/agent/: agent.ts  prompts.ts  skills.ts  tools.ts
src/channels/: line.ts  mqtt.ts  webchat.ts
src/gateway/: chat.ts  server.ts  websocket.ts
src/gateway/routes/: api.ts
src/nodes/: manager.ts
src/services/: action-runner.ts  composite-rule-engine.ts  modbus-server.ts  rule-engine.ts  socket-registry.ts  state-store.ts  stats-collector.ts
src/utils/: config-schema.ts  helpers.ts  logger.ts
workspace/: AGENTS.md  TOOLS.md
workspace/models/: .gitkeep
workspace/skills/anomaly/: SKILL.md
workspace/skills/classify/: SKILL.md
workspace/skills/deploy/: SKILL.md
workspace/skills/detect/: SKILL.md
workspace/skills/monitor/: SKILL.md
